@@ -1,3 +1,5 @@
+* pacific and europe map fixes (Opurt)
+
 Changes for 0.8.2.1
 
 * fix installer with embedded java to actually use the embedded java (sgb)
